--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,7 +1,7 @@
 {{page-title "TestBug"}}
 
 {{!-- The following component displays Ember's default welcome message. --}}
-<WelcomePage />
+<Wat />
 {{!-- Feel free to remove this! --}}
 
 {{outlet}}
